--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     ],
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=8.3",
-        "microsoft/microsoft-graph": "^1.77"
+        "php": ">=8.3"
     },
     "autoload": {
         "psr-4": {
